Hausaufgaben + Rechtschreibfehler korrigiert

--- a/Deutsch/13.09.2013 - Montagetechnik.md
+++ b/Deutsch/13.09.2013 - Montagetechnik.md
@@ -1,4 +1,4 @@
-# Montagetechnik in "Tauben im Graß"
+# Montagetechnik in "Tauben im Gras"
 
 ## Verknüpfungstechniken
 * Scheinbare Fortführung eines Satzes
