--- a/SOWI/03.09.2013 - Wahlprogramm der Piraten Partei.md
+++ b/SOWI/03.09.2013 - Wahlprogramm der Piraten Partei.md
@@ -4,7 +4,7 @@
 
 ### Informationeller Selbstbstimmung stärken, Medienkompetenz fördern
 
-* Behörden und Unternehmen [sollen] dem Grundrecht [gegnüber in] gebührenden Art und Weise, transparent und nachvollziehbar mit den personenbezogenen Daten umgehen und [Verstöße gegen eben dieses oder bei] mangelnde Sorgfalt entsprechend sanktioniert werden.
+* >"Behörden und Unternehmen [sollen] dem Grundrecht [gegnüber in] gebührenden Art und Weise, transparent und nachvollziehbar mit den personenbezogenen Daten umgehen und [Verstöße gegen eben dieses oder bei] mangelnde Sorgfalt entsprechend sanktioniert werden."
 * Weitergabe von Daten an Dritte muss gegenüber dem Kunden kommuniziert und begründet werden.
 * Dem Bürger soll Anspruch auf Selbstauskunft, Korrektur, Sperrung oder Löschung von entsprechenden Daten gegeben werden.
 
@@ -19,7 +19,7 @@
 * Meldedaten (erhoben durch die Gremien der Bundesepublik) sollen nicht ohne Zustimmung des Bürgers an Dritte weiter gegeben werden.
 * Abschaffung des Listenprivilegs und Anpassung an das Grundgesetz (u.a. soll die Weitergabe der Meldedaten an öffentlich-rechtliche Medien unterbunden werden)
 
-### Verdachtsunabhängige Dantenspeicherung verhindern 
+### Verdachtsunabhängige Datenspeicherung verhindern 
 
 * Abschaffung der Vorratsdatenspeicherung (Mögliche Strafzahlungen gegenüber der EU sollen in Kauf genommen werde)
 * Recht auf anonyme Bezahlungen im Internet und Kommunikation soll auch in Zukunf gegeben sein und "verteidigt" werden
