--- a/SOWI/03.09.2013 - Wahlprogramm der Piraten Partei.md
+++ b/SOWI/03.09.2013 - Wahlprogramm der Piraten Partei.md
@@ -4,7 +4,7 @@
 
 ### Informationeller Selbstbstimmung stärken, Medienkompetenz fördern
 
-* >"Behörden und Unternehmen [sollen] dem Grundrecht [gegnüber in] gebührenden Art und Weise, transparent und nachvollziehbar mit den personenbezogenen Daten umgehen und [Verstöße gegen eben dieses oder bei] mangelnde Sorgfalt entsprechend sanktioniert werden."
+* "Behörden und Unternehmen [sollen] dem Grundrecht [gegnüber in] gebührenden Art und Weise, transparent und nachvollziehbar mit den personenbezogenen Daten umgehen und [Verstöße gegen eben dieses oder bei] mangelnde Sorgfalt entsprechend sanktioniert werden."
 * Weitergabe von Daten an Dritte muss gegenüber dem Kunden kommuniziert und begründet werden.
 * Dem Bürger soll Anspruch auf Selbstauskunft, Korrektur, Sperrung oder Löschung von entsprechenden Daten gegeben werden.
 
@@ -54,6 +54,6 @@
 * Keine Hierachische Asylantragsgewährleistung
 * Maßnahmen zu sicheren Grenzüberquerung
 * Freie Wahl des Aufenthaltortes für alle Menschen
-* Dezentrale Unterkünfte für Asyanwerber
+* Dezentrale Unterkünfte für Asylanwerber
 * Keine Isolation von Asylanwerbern
 
