Notizen zum heutigem Geschichts- + Deutschunterricht

--- a/Geschichte/11.09.2013 - Krieg und Ermordung der europäischen Juden.md
+++ b/Geschichte/11.09.2013 - Krieg und Ermordung der europäischen Juden.md
@@ -38,3 +38,14 @@
 
 ### Maßnahmen gegen Juden
 * Systematische Ermordung in Vernichtungslagern
+
+
+## Diskussion zur Schlussfolgerung Peter Longerichs (Hausaufgabe)
+
+Der Meinung Peter Longerichs kann ich mich nur anschließen. 
+Die Position, dass die Deutsche Bevölkerung von der Vernichtung der Juden gewusst hatten bzw. Vermutungen in diese Richtung angestellt worden sind bspw. aufgrund von plötzlichen Verschwinden eines Großen Teils der Bevölkerung. 
+Die Ignorierung dieser Fakten lässt sich meiner Meinung nach auch nur als Verdrängungstaktik deuten. 
+Die Verdrängung von historischen Fakten sehe ich aber auf keine Fall als akzeptabel an. 
+Durch dieses Verhalten werden nämlich keine Probleme gelöst sondern lediglich nur (sehr naheliegend) aufgeschoben. 
+Anderseits sollte man auch nicht zu stark an der Vergangeheit festhalten, da die Zeit trotzdem Weiter geht, den Opfern vergangener Verbrechen sollten aber trotzdessen in Erinnerung bleiben, da sich ansonsten die Taten der Vergangenheit auch wieder wiederholen könnten. 
+Eine Verantwortung bei Generationen, die nichts mit den Verbrechen insofern zu tun haben sehe ich aber dagegen als Falsch an.
