--- a/Deutsch/20.09.2013 - Gruppenarbeit.md
+++ b/Deutsch/20.09.2013 - Gruppenarbeit.md
@@ -1,4 +1,5 @@
-# Gruppenarbeit: "Vergangenheitsbewältigung - Textauszüge für die Analyse"
+# Vergangenheitsbewältigung - Textauszüge für die Analyse
+
 
 
 ## S. 68, Z. 12-24
@@ -13,7 +14,6 @@
 * Vergessen "unangenehme Erinnerung" (bspw. Bunker, Graben, Sirenen, etc.) → Glorifizierung → Glorifizierung ("um Sieg betrogen werden")
 * Trauern nicht
 
-
 ## S. 75, Z. 1-19
 
 ### Kontext:
@@ -21,7 +21,7 @@
 
 ### Analyse:
 * Die Deutschen bewundern den "rollenden Aufwand", werten jedoch die Luxuswagen der Herrenfahrer (Amerikaner) als Überheblichkeit
-
+* Sind noch von den eingeprägten Spielregeln beeinflusst
 
 ## S. 82, Z. 24 - S. 83, Z. 11
 
@@ -37,7 +37,6 @@
 * Spricht von Säuberung, bekam Auszeichnung → Stolz
 * Anderer Soldat: Russland, harter Krieg
 
-
 ## S. 129, Z. 24 - S. 131, Z. 8
 
 ### Kontext:
@@ -48,7 +47,6 @@
 * In Hierarchiedenken gefangen
 * Stände nicht überwindbar
 * Träumt vom sozialen Aufstieg (durch Prinz oder Chef)
-
 
 ## S. 133, Z. 23 - S. 134, Z.16
 
@@ -61,7 +59,6 @@
 * Verkäuferin: Frau Behrend musste sich mit Negern einlassen um zu überleben
 * Verkäufering: Amerikaner sind Sittenlos → Vorbehalte gegenüber den Amerikanischen Besetzern
 
-
 ## S.197, Z. 14-29
 
 ### Kontext:
@@ -71,5 +68,3 @@
 * Vater des Fräulein: "Bei Hitler war's anders! Da war Zug drin" (S. 197, Z.22ff) → Glorifizierung der Vergangenheit
 * Mutter nickt, denkt aber an verbrannt Aussteuer - von Nazis verbrannt, sind jetzt arm. → Untedrückung (S. 197 Z. 28 "Wiedersprechen")
 * Vater verdrängt Nazi-Taten, Fräulein will Neues
-
-
