--- a/SOWI/22.09.2013 - Wissenschaft und Werturteile.md
+++ b/SOWI/22.09.2013 - Wissenschaft und Werturteile.md
@@ -1,11 +1,14 @@
 # Wissenschaft und Werturteile
 
-1. Sachverhalt: Einige Bauarbeiter essen Kaviar zum Frühstück
+## 1. Sachverhalt: Einige Bauarbeiter essen Kaviar zum Frühstück
 * Werturteil: Es ist ungerecht, dass einige Bauarbeiter Kaviar zum Frühstück essen
 * Wissenschaft: Einigen Bauarbeitern ist es möglich Kaviar zum Frühstück zu essen
-2. Sachverhalt: Unternehmer verdienen im Durchschnitt zehnmal so viel wie Arbeiter
+
+## 2. Sachverhalt: Unternehmer verdienen im Durchschnitt zehnmal so viel wie Arbeiter
 * Werturteil: Unternehmer verdiehnen nicht gerechtfertigt mehr als die Arbeiter
-* Wissenschaft: Siehe Sachverhalt
-3. Sachverhalt: Die deutsche Landwirtschaft erhält jährlich rund 2,6 Mrd. Euro Subventionen
-* Werturteil: Es ist sehr gut das die landwirtschaft stark subventioniert wird
-* Wissenschaft: Siehe Sachverhalt
+* Wissenschaft: Die Einkommenverteilung ist ungleich
+
+## 3. Sachverhalt: Die deutsche Landwirtschaft erhält jährlich rund 2,6 Mrd. Euro Subventionen
+* Werturteil: Es ist sehr gut das die Landwirtschaft stark subventioniert wird
+* Wissenschaft: Die Subventionierung der Landwirtschaft stellt 1/4 des Etat der Landwirte.
+
