--- a/Deutsch/22.09.2013 - Innere Monologe.md
+++ b/Deutsch/22.09.2013 - Innere Monologe.md
@@ -18,9 +18,20 @@
 * Gedanken und Gefühle sollen möglichst direkt wiedergegeben werden
 * Es werden meist sehr einfache Sätze verwendet oder es kommt gar zu einer Auflösung der Syntax
 
-## Umgeschriebener Textauszug aus "Tauben im Gras" (erlebte Rede -> innerer Monolog)
+## Tafelabschrieb zur Innenweltdarstellung (→ Gedanken und Gefühle)
 
-Edwin kam mit Schnellen Schritten in die Bar und eilte zur Theke.
+* Auktorialer Erzähler
+* Erlebte Rede:
+    Dritte Person Präteritum = Innensicht ohne kommentierende Einmischung des Erzählers
+    → Demarkationsprobleme: Verschmelzung von Erzähler- und Figurenstimme
+* Innerer Monolog:
+    Ich-Form Präsens
+* Bewusstseinseinstrom:
+    Unvollständige Syntax
+
+## Umgeschriebener Textauszug aus "Tauben im Gras" (erlebte Rede → innerer Monolog)
+
+Edwin kam mit schnellen Schritten in die Bar und eilte zur Theke.
 Er flüsterte mit dem Mixer. Der Mixer goss Edwin den Kognak in ein großes Rotweinglas.
 Edwin trank das Glas aus. 
 "Ach, habe ich großes Lampenfieber! Ich hoffe durch den Kognak kann ich dem entgegenwirken"
@@ -34,4 +45,4 @@ Der größte Teil der Leute schläft ja sogar bei dem was ich sage ein.
 Warum sind sie denn dann hier? Um sich zu präsentieren, dass ist es! 
 Unglaublich dieser Pöbel. 
 Und zu allem überfluss starrt mich schon wieder diese Treppenweib an, ich würde am liebsten wieder zu Hause sein! 
-Ach was vermisse ich meine kleine vollgepackte Wohnung!"
+Ach was vermisse ich meine kleine mit Büchern zugestellte Wohnung!"
