--- a/Englisch/20.09.2013 - Ambition.md
+++ b/Englisch/20.09.2013 - Ambition.md
@@ -7,7 +7,7 @@
 
 ## Negative
 * Destructive force
-* The ambition controls the person -> obsession
+* The ambition controls the person → obsession
 * An intense ambiton may tempt people to take morally questionable measures to archieve their aims.
 
 Macbeth informations: resources.mhs.vic.edu.au/macbeth
