--- a/Deutsch/24.09.2013 - Erzählsituation in Tauben im Gras.md
+++ b/Deutsch/24.09.2013 - Erzählsituation in Tauben im Gras.md
@@ -4,5 +4,10 @@
 Auktorialer Erzähler mit Wechsel zum personalen Erzähler (erlebte Rede, innerer Monolog)
 
 ## Erzählhaltung:
+* Der Autor äußert sich distanziert zu den einzelnen Personen 
+* Die Kritik, die der Autor trifft ist weiterhin meißt eher indirekt zu verorten
+* Teilweise werden auch allgemein gültige Definitonen von dem Autor abgegeben, diese lassen sich aber meist sehr ironisch lesen
+* Die ironischen Abwertungen sind dadurch zu erkennen da diese bspw. jedlichem Sinn entfremdet sind und enorm schwarzmalerisch sind
+* Es ensteht eine Diskrepanz zwischen Wirklichkeit und Inhalt, negative Eigenschaften werden nämlich durch den Autor hervorgehoben und als positiv dargestellt
 
 ## Wirkung:
