--- a/Religion/11.09.2013 - Die Auferstehung als zentrales Element.md
+++ b/Religion/11.09.2013 - Die Auferstehung als zentrales Element.md
@@ -3,4 +3,4 @@
 > Jesus verkündigte das Reich Gottes, gekommen ist die Kirche (Urheber recherchierbar).
 
 ## Vom historische Jesus zum kerygmatischen Christus (Auferstehung als zentrales Element)
-Der historische Jesus => Der Verkündiger => Jesusbewegung => Auferstehung => Der kerygmatische Christus => Der Verkündigte (Jesus, als Christus Verkündigt) => Beginn der Kirche
+Der historische Jesus → Der Verkündiger → Jesusbewegung → Auferstehung → Der kerygmatische Christus → Der Verkündigte (Jesus, als Christus Verkündigt) → Beginn der Kirche
