Irgendetwas wurde verändert

--- a/Deutsch/20.09.2013 - Gruppenarbeit.md
+++ b/Deutsch/20.09.2013 - Gruppenarbeit.md
@@ -40,7 +40,7 @@
 ## S. 129, Z. 24 - S. 131, Z. 8
 
 ### Kontext:
-* Richter trifft Tochter von Fr. Behrend:
+* Richard trifft Tochter von Fr. Behrend:
 * Tochter hat Vorurteile gegenüber den Amerikanern
 
 ### Analyse:
@@ -54,7 +54,7 @@
 * Richard ist in einem Laden und unterhält sich mit der Verkäuferin über Frau Behrend
 * Richard fühlt sich von der Verkäuferin bedrängt
 
-## Analyse:
+### Analyse:
 * "Alles hatten sie uns genommen [...] Neger haben sie uns geschickt" (S. 133, Z. 23ff) → Rassistisches Denken
 * Verkäuferin: Frau Behrend musste sich mit Negern einlassen um zu überleben
 * Verkäufering: Amerikaner sind Sittenlos → Vorbehalte gegenüber den Amerikanischen Besetzern
