--- a/Deutsch/22.09.2013 - Innere Monologe.md
+++ b/Deutsch/22.09.2013 - Innere Monologe.md
@@ -1,6 +1,8 @@
 # Merkmale von inneren Monologen, der erlebten Rede und des Bewusstseineinstroms
 
-## Innerer Monolog
+## Darstellung der jeweiligen Merkmale (Hausaufgabe)
+
+### Innerer Monolog
 
 * Hat sich Ende des 19. Jahrhunderts entwickelt
 * Wird vor allem in Prosatexten verwendet
@@ -8,11 +10,11 @@
 * Empfindungen und Gefühle kommen direkt zum Ausdruck
 * Verwendung der Ich-Form des Präsens
 
-## Erlebte Rede
+### Erlebte Rede
 
 * Die Bewusstseinsinhalte werden in der dritten Person Indikativ Präteritum (bspw.: "Er hatte Lampenfieber") ausgedrückt (ansonsten die selbe Merkmale wie der Innere Monolog)
 
-## Bewusstseinseinstrom
+### Bewusstseinseinstrom
 
 * Englisch: Stream of Consciousness
 * Gedanken und Gefühle sollen möglichst direkt wiedergegeben werden
