--- a/Deutsch/24.09.2013 - Erzählsituation in Tauben im Gras.md
+++ b/Deutsch/24.09.2013 - Erzählsituation in Tauben im Gras.md
@@ -1,13 +1,19 @@
 # Erzählsituation in "Tauben im Gras"
 
-## Erzählertyp:
+## Erzählertyp
 Auktorialer Erzähler mit Wechsel zum personalen Erzähler (erlebte Rede, innerer Monolog)
 
-## Erzählhaltung:
-* Der Autor äußert sich distanziert zu den einzelnen Personen 
+## Erzählhaltung
+* Der Autor äußert sich distanziert zu den einzelnen Personen
 * Die Kritik, die der Autor trifft ist weiterhin meißt eher indirekt zu verorten
 * Teilweise werden auch allgemein gültige Definitonen von dem Autor abgegeben, diese lassen sich aber meist sehr ironisch lesen
 * Die ironischen Abwertungen sind dadurch zu erkennen da diese bspw. jedlichem Sinn entfremdet sind und enorm schwarzmalerisch sind
 * Es ensteht eine Diskrepanz zwischen Wirklichkeit und Inhalt, negative Eigenschaften werden nämlich durch den Autor hervorgehoben und als positiv dargestellt
+* abwertend
+* verständnisvoll/ verteidigend/ sympathisierend
+* ironisch/ kritisch
 
-## Wirkung:
+## Wirkung
+* Einblicke in das Innenleben der Figuren, aber gesteuert und kontrolliert durch den Erzähler: Erzähler steuert die Wahrnehmung der Figuren durch den Leser
+* Schafft Nähe und Distanz zum Geschehen → Erzähler als Überinstanz
+
