--- a/Deutsch/13.09.2013 - Montagetechnik.md
+++ b/Deutsch/13.09.2013 - Montagetechnik.md
@@ -8,4 +8,4 @@
 ## Wirkung der Verknüpfungstechniken auf den Leser
 * Orientierungshilfe für den Leser
 * Verbindung von Form und Sprache geht einher mit einer Trennung im Inhalt und unterstreicht sie: Figuren sind isoliert, leben nebeneinander und verfolgen gegensätzliche Ziele
-* Spiegelt komplexität und Disparität der modernen Welt
+* Spiegelt Komplexität und Disparität der modernen Welt
