--- a/Geschichte/25.09.2013 - Nachkriegspolitik der Alliierten.md
+++ b/Geschichte/25.09.2013 - Nachkriegspolitik der Alliierten.md
@@ -1,6 +1,6 @@
 # Position der Einzelnen Alliierte zum weiteren Verfahren in der Nachkriegszeit (1945)
 
-## Erklärung über Europa (im Rahmen der Konferenz in Jalta entstaden)
+## Erklärung über Europa (im Rahmen der Konferenz in Jalta entstanden)
 * Ziel: Ordnung in Europa
 * Politik der drei Regierungen ist gleichzuschalten
 * Die einzelnen Ideologien sollen eine untergeordetne Rolle zu Beseitigung der Faschistischen und Nationalsozialistische Reste in Europa einnehmen
