Ersetzen des Krüppelpfeils durch Unicode-Pfeil

--- a/Englisch/17.09.2013 - The Great Chain of Being.md
+++ b/Englisch/17.09.2013 - The Great Chain of Being.md
@@ -1,6 +1,6 @@
 # The Great Chain of Being
 
 * Everyone and everything is arranged in a specific order (= hierachy)
-* Human beings can violate the natural order of things by using force to improve their positions, e.g. rebelling against the King -> chaos follows, e.g natural catastrophies, egoism, violence in society, personal disasters (!= godfather)
+* Human beings can violate the natural order of things by using force to improve their positions, e.g. rebelling against the King → chaos follows, e.g natural catastrophies, egoism, violence in society, personal disasters (!= godfather)
 * Order -- disorder -- disaster
 * Patron = nobel man with money (!= godfather)
