--- a/Englisch/07.10.2013 - Macbeth Summary.md
+++ b/Englisch/07.10.2013 - Macbeth Summary.md
@@ -13,12 +13,15 @@
 ## Act II:
 
 * Lady Macbeth dazed the guards of Duncan so her husband can murder the King
-* Macbeth come out of Duncans Chamber after he murderd him smeared with blood and with the dragger in his hand
-* Macbeth is very emotional and won't go back in the room to place the dragger inside it
+* Macbeth comes out of Duncans Chamber after he murderd him smeared with blood and with the dragger in his hand
+* Macbeth is very emotional and won't go back in the room to place the dragger inside of it
 * Lady Macbeth is placing the dragger next to the Guards
-* Now, before Macbeth and his woman could clean their dresses and washing their hands is knocks at their door
-* Macduff dicoverd the corpse of Duncan
-* Macbeth kills as a reaction to this the guards
+* Before Macbeth and his woman could clean their dresses and washing their hands it knocks on the castle's drawbridge
+* Lady Macbeth and Macbeth are going back to their chamber to clean their hands and dresse
+* The porter open the bridge and let Macduff come in
+* Macbeth goes to the visitors (he says he wake up because of the noises)
+* Macduff goes inside of Duncans chamber and dicoverd the corpse of Duncan 
+* Macbeth kills as a reaction to this the guards of Duncan (to show they were the murderer of Duncan)
 * Duncan's sons scared of this behavoir are going away (Malcom to England and Donalbain to Ireland)
 * Macbeth is crowned to the new King of Scotland
 
