Geschichts-Stunde + Deutsch Hausaufgaben

--- a/Deutsch/Ästhetizismus (07.10.2013)/07.10.2013 - Hofmannsthal 'Die beiden'.md
+++ b/Deutsch/Ästhetizismus (07.10.2013)/07.10.2013 - Hofmannsthal 'Die beiden'.md
@@ -9,3 +9,5 @@ Wörter wie "Gebärde" (Vers 7) und "schwer" (Vers 11) lassen die Handlung als e
 Dies lässt das Gedicht sehr negativ und erdrückend für den Leser wirken.
 
 # Formanalyse
+Das Gedicht ist ein Sonnet, zwar ist das Reimschema an einigen Stellen unterbrochen trotzdessen lässt sich die Struktur des Sonetts eindeutig erkennen.
+Das Metrum des Gedichts ist ein 4-hebiger Jambus.
