--- a/Deutsch/Ästhetizismus (07.10.2013)/07.10.2013 - Ästhetizismus.md
+++ b/Deutsch/Ästhetizismus (07.10.2013)/07.10.2013 - Ästhetizismus.md
@@ -6,6 +6,7 @@
 * Negation der gesellschaftlichen Wirklichkeit
 * Strenge, kunstvolle Form ("vollkommenes Gedicht", bspw. Terzinen)
 * Symbolsprache
+* Größen des Ästhetizismus: Rainer Maria Rilke, Stefan George, Hugo von Hofmannsthal
 
 # Terzinen
 
