--- a/Deutsch/Ästhetizismus (07.10.2013)/08.10.2013 - Hoffmannsthal Zitat zum Ästhetizismus.md
+++ b/Deutsch/Ästhetizismus (07.10.2013)/08.10.2013 - Hoffmannsthal Zitat zum Ästhetizismus.md
@@ -1,3 +1,5 @@
 > Trennt ihr vom Inhalt die Form, so seid ihr nicht schaffende Künstler. 
 > Form ist vom Inhalt der Sinn, Inhalt das Wesen der Form."
-Urheber Hofmannsthal
+
+Hugo von Hofmannsthal
+
