Religions Hausaufgaben + Korrekturen am Hoffmannsthal Zitat

--- a/Deutsch/Ästhetizismus (07.10.2013)/08.10.2013 - Hoffmannsthal Zitat zum Ästhetizismus.md
+++ b/Deutsch/Ästhetizismus (07.10.2013)/08.10.2013 - Hoffmannsthal Zitat zum Ästhetizismus.md
@@ -1,5 +1,5 @@
 > Trennt ihr vom Inhalt die Form, so seid ihr nicht schaffende Künstler. 
-> Form ist vom Inhalt der Sinn, Inhalt das Wesen der Form."
+> Form ist vom Inhalt der Sinn, Inhalt das Wesen der Form.
 
-Hugo von Hofmannsthal
+Urheber: Hugo von Hofmannsthal
 
