--- a/Religion/08.10.2013 - Innozenz III.md
+++ b/Religion/08.10.2013 - Innozenz III.md
@@ -6,7 +6,7 @@
 * Mit 37 Jahren Kardinal (jüngster Kardinal seiner Zeit)
 * Bildung: Theologisches und (vor allem) juristisches Studium in Rom, Paris und Bologna
 * Galt als: Gewandter Redner und guter Sänger
-* Bedeutend bei der etablierung des Papsttums
+* Bedeutend bei der Etablierung des Papsttums
 * Sah sich selber als "Stellvertreter Christi" (Besitzt ebenfalls die "Schlüssel" zum Himmel) 
 * Eigene Vorstellung über die Rolle des Papsttums: Vermittler zwischen Gott und den Menschen
 * Ersetze Titel "Vicarius Beati Petri" durch "Vicarius Christi"
