--- a/SOWI/07.10.2013 - Krankenversicherung.md
+++ b/SOWI/07.10.2013 - Krankenversicherung.md
@@ -2,13 +2,14 @@
 
 ## Wer bezahlt wie viel?
 
-* Arbeitgeber (7,3 %) und Arbeitnehmer (8,2 %).
+* Arbeitgeber (7,3 %) 
+* Arbeitnehmer (8,2 %)
 
 ## Leistungen
 
 * Gesundheitliche Prävention
 * Finanzielle Absicherung
-* Sozialversichert bei Krankenkasse
+* Sozialversicherung bei Krankenkasse
 * Gruppen- und Individualprophylaxe
 * Medizinische Vorsorgeleistung
 * Leistungen bei Krankheiten
@@ -17,13 +18,15 @@
 * Leistungen bei Schwangerschaft und Mutterschaft
 
 ## Gründe für Reformbedarf
-* paritätische Aufteilung gebrochen
+* Paritätische Aufteilung gebrochen
 * 2 Klassen Gesellschaft in Bezug auf private und gesetzliche Krankenkasse
-* Nicht ausreichende Absicherung (Brillen, Zahersatz, etc.)
+* Nicht ausreichende Absicherung (Brillen, Zahnersatz, etc.)
 * Leistungsabrechnungen der Krankenkassen zu gering
 
 ## Reformansätze
-* Bürgerversicherung
+* Bürgerversicherung (Aufhebung der 2-Klassen Gesellschaft)
 * Arbeitgeber soll mehr bezahlen
 * Gesetzliche Vorgaben zu mehr Absicherungen tätigen
 * Leistungsabrechnungen neu gestalten
+* Kostenreduzierung auf Seiten der Anbieter (Pharmaindustrie, Ärztliche Leistungen)
+
