gestriger Schultag + Religionsunterricht

--- a/Deutsch/Tauben im Gras (13.09. - 24.09.2013)/16.09.2013 - Abstract zu Hanna Arendt.md
+++ b/Deutsch/Tauben im Gras (13.09. - 24.09.2013)/16.09.2013 - Abstract zu Hanna Arendt.md
@@ -10,4 +10,5 @@ Man kann zwar damit argumentieren, dass dies an der noch zu erledigenden Verantw
 Dies ist aber insofern fadenscheinig, da auch in dieser schweren Situation die Verbrechen der Vergangenheit nicht ungeschehen gemacht werden können. Ein Respektvoller Umgang sollte gerade mit Verfolgten Bevölkerungsgruppen erwartet werden. 
 
 Es fällt aber auch auf, dass die Autorin auch von einer etwas distanzierten Position ihre Werke verfasst, zudem wirkt es nicht so als dass Sie wirklich in Not leben würde.
-Aus diesem Grunde kann man im Groben auch verstehen, dass die Befragten auf diese Art des Interviews teilweise etwas unpassend reagierten. Auch finde ich dass die Betrachtung und Bewerung des Intellekts von Menschen als arrogant definiert werden kann.
+Aus diesem Grunde kann man im Groben auch verstehen, dass die Befragten auf diese Art des Interviews teilweise etwas unpassend reagierten. 
+Auch finde ich dass die Betrachtung und Bewerung des Intellekts von Menschen als arrogant definiert werden kann.
