SOWI + Geschichts Unterricht

--- a/SOWI/17.11.2013 - Agenda 2010.md
+++ b/SOWI/17.11.2013 - Agenda 2010.md
@@ -8,7 +8,8 @@ Gerhard Schröder verfolgt mit der Agenda 2010 die Ziele:
 * "Rahmenbedingungen für mehr Wachstum und für mehr Beschäftigung verbessern"
 * Leistungskürzung für den Staat
 * Eigenverantwortung fördern
-* Erhaltung der Substanz des Sozialstaats -> Durchgreifende Veränderungen sind erfolrderlich
+* Erhaltung der Substanz des Sozialstaats -> Durchgreifende Veränderungen sind erforderlich
+* Fördern und Fordern
 
 * 7 Mrd. Euro für kommunales Investitionsprogramm
 * 8 Mrd Euro für private Wohnungsbausanierungen
