--- a/Deutsch/Sprachkrise (07.10.2013)/24.11.2013 - Klausurvorbereitung Ästhetizismus.md
+++ b/Deutsch/Sprachkrise (07.10.2013)/24.11.2013 - Klausurvorbereitung Ästhetizismus.md
@@ -29,7 +29,7 @@ Im genauen wird von dem lyrischen Ich der sorglose Umgang der Menschen mit den W
 Das lyrische Ich sieht sich als einzelne Instanz an und sieht sich der gesamten Menschheit gegenüber.
 Dies ist erkennbar daran das, dass Gedicht vorallem durch die Personalpronomen "Ich" und "Ihr" dominiert wird. 
 Anhand des ersten Vers lässt sich erkennen, dass das lyrische ich sich mit dem "Ihr" auf die gesamte Menschheit bezieht, da das lyrische Ich seine Angst in der Menschen Wort lokalisiert (vgl. Z. 1: "Ich fürchte mich so vor der Menschen Wort").
-Die Forderung des lyrischen Ich ist Grundsätzlich das Erhalten der Ursprüngliche Spra.
+Die Forderung des lyrischen Ich ist Grundsätzlich das Erhalten der Ursprüngliche Sprache.
 
 Das Gedicht gliedert sich in 3 Strophen, welche jeweils aus 4 Versen bestehen (drei Quartetten).
 Den ersten zwei Stophen des Gedichts liegt als Reimschema der Schweifreim zu Grunde.
