--- a/Religion/14.11.2013 - Biografie von Luther.md
+++ b/Religion/14.11.2013 - Biografie von Luther.md
@@ -1,5 +1,11 @@
-# Biografie von Martin Luther
+Biografie von Martin Luther
+===========================
 
-* 10.11.1483: In Eisleben geboren
-* 1505: Nachdem er dem Tode durch ein Gewitter nahe gekommen ist, ist er in ein Kloster eingetreten
-* 1512: Doktor der Theologie (Professor für Bibelauslegung) in der Universität Wittenberg
+-   10.11.1483: In Eisleben geboren
+-   1505: Nachdem er dem Tode durch ein Gewitter nahe gekommen ist, ist
+    er in ein Kloster eingetreten
+-   1512: Doktor der Theologie (Professor für Bibelauslegung) in der
+    Universität Wittenberg
+-   1513: Reformatorische Einsicht Luthers (durch den Glauben vor Gott
+    gerecht gesprochen werden)
+
