--- a/Religion/14.11.2013 - Die Rechtferigung des Menschen.md
+++ b/Religion/14.11.2013 - Die Rechtferigung des Menschen.md
@@ -1,13 +1,21 @@
-# Die Rechtfertigung des Menschen
+Die Rechtfertigung des Menschen
+===============================
 
-1. "Simul iustus et peccator"
-Übersetzt heißt dieser Satz: "Zugleich gerecht und Sünder"
-Dies ist zum einen zwar ein Paradoxon, gemeint ist damit aber, dass der Mensch durch Jesu Tod am Kreuz gerecht gesprochen worden ist.
-Bedeuten tut dies, dass man durch den Tod Jesu nicht von seinen Sünden freigesprochen wurde, sondern diese weiter Besteht.
-Mit dem Glauben an Gott bzw. der Anerkennung das Jesus durch seinen Tod die Sünden auf sich genommen hat und die Akzeptanz seiner getanen Sünden ist man Gerecht geworden.
+1.  "Simul iustus et peccator" Übersetzt heißt dieser Satz: "Zugleich
+    gerecht und Sünder" Dies ist zum einen zwar ein Paradoxon, gemeint
+    ist damit aber, dass der Mensch durch Jesu Tod am Kreuz gerecht
+    gesprochen worden ist. Bedeuten tut dies, dass man durch den Tod
+    Jesu nicht von seinen Sünden freigesprochen wurde, sondern diese
+    weiter Besteht. Mit dem Glauben an Gott bzw. der Anerkennung das
+    Jesus durch seinen Tod die Sünden auf sich genommen hat und die
+    Akzeptanz seiner getanen Sünden ist man Gerecht geworden.
 
-2. "Sola fide" und "Sola gratia"
-Die Rechtfertigung geschieht aus Glaube (fide) und Gnade (gratia)
+2.  "Sola fide" und "Sola gratia" Die Rechtfertigung geschieht aus
+    Glaube (fide) und Gnade (gratia)
 
-3. "Nicht die guten Werke machen einen gerechten Mensch, sondern ein gerechter Mensch macht gute Werke"
-Nachdem man Gerecht geworden ist kann man erst gute Taten tun. Die Gerechtigkeit ist also eine Bedingung um gute Werke zu tun.
+3.  "Nicht die guten Werke machen einen gerechten Mensch, sondern ein
+    gerechter Mensch macht gute Werke" Nachdem man Gerecht geworden ist
+    kann man erst gute Taten tun. Die Gerechtigkeit ist also eine
+    Bedingung um gute Werke zu tun.
+
+
