--- a/Englisch/26.11.2013 - Narrator techniques.md
+++ b/Englisch/26.11.2013 - Narrator techniques.md
@@ -1,7 +1,23 @@
 Narrator techniques
 ===================
 
--   Omniscient narrator
--   Third-person (selective) narrator
--   I-narrator
+Omniscient narrator
+-------------------
+
+-   Knows every character's thoughts, feelings etc.
+-   Reader gets insides, can see upcoming conflicts
+
+First-person narrator (I-narrator)
+----------------------------------
+
+-   Reader has direct access to a characters thoughts and feelings
+-   It is easier for the reader to identify and to feel sympathy
+-   The reader experiences everything through one perspective
+-   The reader feels closer to character
+
+Third-person (selective) narrator
+---------------------------------
+
+-   Story is told from one character's perspective
+-   Reader has "indirect" access to the character
 
