--- a/Religion/14.11.2013 - Biografie von Luther.md
+++ b/Religion/14.11.2013 - Biografie von Luther.md
@@ -1,11 +1,14 @@
 Biografie von Martin Luther
 ===========================
 
--   10.11.1483: In Eisleben geboren
+-   10.11.1483: In Eisleben geboren.
 -   1505: Nachdem er dem Tode durch ein Gewitter nahe gekommen ist, ist
-    er in ein Kloster eingetreten
+    er in ein Kloster eingetreten.
 -   1512: Doktor der Theologie (Professor für Bibelauslegung) in der
-    Universität Wittenberg
+    Universität Wittenberg.
 -   1513: Reformatorische Einsicht Luthers (durch den Glauben vor Gott
-    gerecht gesprochen werden)
+    gerecht gesprochen werden).
+-   31.10.1517: Luther veröffentlicht seine 95 Thesen, welche kritisch 
+    zum Ablasshandel sind.
+-   1520: Luther verfasst "Von der Freiheit eines Christenmenschen"
 
