Heutiger Schultag (Doppelstunde Deutsch

--- a/Deutsch/09.12.2013 - Die Französische Aufklärung: Condillacs Sprachtheorie.md
+++ b/Deutsch/09.12.2013 - Die Französische Aufklärung: Condillacs Sprachtheorie.md
@@ -9,7 +9,7 @@ Eigenarbeit:
 -   Die Frage ist woher ein einzelnes Volk zu ihrer Sprache kam nicht wo
     die Sprache ihren Ursprung fand
 -   Die von einem Menschen (isoliert von allen anderen) genutzte
-    Seelentätigkeit beläuft sich auf die Wahrnemung und auf das
+    Seelentätigkeit beläuft sich auf die Wahrnehmung und auf das
     Bewusstsein
 -   Gefühle bzw. Bedürfnisse führen dazu, dass sich der Mensch diese
     lebenswichtigen Dinge sich merkt
@@ -22,7 +22,7 @@ Tafelabschrift:
 ---------------
 
 -   Schreie und Bewegungen, die Gefühle ausdrücken, um sich mitzuteilen
-    (vergleiche §2) -\> Instinkt
+    (vergleiche §2) -> Instinkt
 -   Schreie und Bewegungen dienen reflektiert zur Mitteilung von
     Gefühlen, Auslöser: Gewöhnung (vergleiche §3)
 -   Parallele Weiterentwicklung von Sprache und Verstandesgebrauch
@@ -35,3 +35,15 @@ Tafelabschrift:
 -   Pfui-Pfui-Theorie
 -   "Am Anfang war die Geste"-Theorie
 
+## Kritik an der Sprachursprungstheorie Condillacs
+
+-   Jede hinweisende Definition kann missverständlich sein
+-   Unterscheidung der Dinge ist nicht objektiv vorgegeben, sondern
+    sprachlich bedingt
+-   Benennung ist nur dann erfolgreich, wenn es gemeinsame sprachlich
+    vorgegebene Begriffe (= Denkkonzepte) gibt
+
+### Resultat:
+
+Condillacs Namensgebung als entscheidender Schritt der Sprachentsteung setzt,
+wenn es funktionieren soll, Sprache schon vorraus.
