--- a/Deutsch/17.01.2014 - Enstehung der Sprache nach Bickerton.md
+++ b/Deutsch/17.01.2014 - Enstehung der Sprache nach Bickerton.md
@@ -1,13 +1,33 @@
-# Der Linguist Derek Brickerton über die Entstehung der Sprache
+Der Linguist Derek Bickerton über die Entstehung der Sprache
+============================================================
+
+Eigene Zusammenfassung:
+-----------------------
 
 -   Es brauchte einen "Faktor X" welcher die Entwicklung
-    der Sprache voran getrieben hat. In diesem Besipiel ist
+    der Sprache voran getrieben hat. In diesem Beispiel ist
     die Tatsache, dass die Menschen in tropischen Steppen und
     im Grasland ein Faktor, dass die Menschen kommunizieren
     mussten, da die Nahrung sehr weit verbreitet war und
-    es ein hohes aufkommen von Raubtieren gab
+    es ein hohes Aufkommen von Raubtieren gab.
 -   Laute sind dem Tanz der Bienen überlegen, da man
-    Geräusche imitieren konnte
--   Syntax macht den Menschen erst zum Menschen
+    Geräusche imitieren konnte.
+-   Syntax macht den Menschen erst zum Menschen.
 -   Durch die Syntax war es den Menschen erst möglich
     kompliziertere Gedanken zu tätigen.
+
+Zentrale Aussagen Bickertons (Tafelabschrift):
+----------------------------------------------
+
+1.  Entwicklung der Sprache gebunden an Änderungen der Lebensumstände:
+    -   Futtersuche in der Savanne
+    -   Schutz vor Feinden
+    -   Resultat: Kommunikation notwendig → Evolutionärer Vorteil
+2.  Sprunghafte Entwicklung der Sprache vor rund 100.000 Jahren, die
+    mit der komplexeren Werkzeugentwicklung einherging: Planung braucht
+    Grammatik um Komplexität und Konditionalität auszudrücken
+3.  Beim Menschen dominieren nich äußere Reize, sondern innere, daher
+    kann der Mensch "innere Nachrichten" erzeugen und äußern. Er allein
+    hat auch die dazu notwendige Anzahl von Neuronen, um die neuronale
+    Stabilität herzustellen, die man für die Erzeugung eines Satzes
+    braucht.
