--- a/Geschichte/15.01.2014 - Zehn-Punkte-Plan.md
+++ b/Geschichte/15.01.2014 - Zehn-Punkte-Plan.md
@@ -20,7 +20,7 @@ Helmut Kohl: Der Zehn-Punkte-Plan
 -   Überwindung der Trennung Europas
 -   Abrüstung und Rüstungskontrolle
 -   KSZE-Prozeß muss feiter fortgeführt werden
--   Bei einem Unumkerbahren VOrgang (vermutlich
+-   Bei einem Unumkerbahren Vorgang (vermutlich
     Wiedervereinigung) unterstützt BRD die DDR
 -   DDR: Abschaffung des politischen Strafrechts
 -   Perspektive für die weitere Zusammenarbeit:
