--- a/Religion/15.01.2014 - Zeitstrahl.md
+++ b/Religion/15.01.2014 - Zeitstrahl.md
@@ -4,20 +4,28 @@ Zeitstrahl
 1933:
 -----
 
-### Juli:
-
-* Neue Verfassung der evangelischen Kirche (Neustrukturierung der Kirche und Bischof wurde oberster "Führer")
-* Kirchenwahl (Deutsche Christen: 70%)
-
 ### 07. April:
 
-* Einführung des Arier-Paragraphen: Nicht arische Beamten mussten Dienst quittieren
+-   Einführung des Arier-Paragraphen: Nicht arische Beamten mussten
+    Dienst quittieren
+
+### Juli:
+
+-   Neue Verfassung der evangelischen Kirche (Neustrukturierung der
+    Kirche und Bischof wurde oberster "Führer")
+-   Kirchenwahl (Deutsche Christen: 70%)
 
 ### 06. September:
 
-* Einführung des Arier-Paragraphen in der Kirche
+-   Einführung des Arier-Paragraphen in der Kirche
 
 ### 13. November
 
-* Sportplastkundgebund der Deutschen Christen → Sinkender Einfluss
+-   Sportplastkundgebund der Deutschen Christen → Sinkender Einfluss
 
+1934:
+-----
+
+### Mai
+
+-  Barmer Bekenntnissynode
