--- a/Englisch/30.01.2014 - The British system of government.md
+++ b/Englisch/30.01.2014 - The British system of government.md
@@ -1,26 +1,48 @@
-## General informations
+General informations
+--------------------
+
+Britain is a parliamentary democracy and a monarchy.
+
+-   The members of the House of Commons make the laws
+-   The 650 Member of Parliament are eleted in a first-past-the-post
+    system whenever the Prime Minister dissolves Parliament (one
+    Minister of Parliament per constituecy).
+-   The maximum life of a parliament is five years.
+-   The leader of the winning party becomes Prime Minister and forms
+    a government (Cabinet).
+-   The members of the House of Lords can suggest changes to
+    legislation. They are basically not elected (appointed or by
+    heritage) although the House of Lords is being reformed (over
+    700 members).
+-   The Queen is the formal Head of State, appoints members of the
+    Upper House and formally approves legislation and dissolves
+    Parliament but the Prime Minister tells what to do.
 
 -   The Parliament controlls the actions of the Governemnt
--   General election: When parialment is dissolved by the Queen of advice of the Prime Minister
+-   General election: When parialment is dissolved by the Queen of
+    advice of the Prime Minister
 -   Maximum life of the Parliament: 5 Years
 -   Prime Minister = Highest Instance
 -   700 Members at the House Of Lords
 -   Highest Court = Supreme Court
 -   The members of the Parliament represent the 650 constituencies
 
-## The Prime Minister
+The Prime Minister
+------------------
 
 -   No directly job job description
 -   Representative funtion (Holding speeches etc.)
--   Spend time from Monday to Thursday and occasionally part of Friday in Westminster (constituecy time)
+-   Spend time from Monday to Thursday and occasionally part of Friday
+    in Westminster (constituecy time)
 -   Involved in a variety of work in the House Of Commons
 -   Promote his own party
 
-+--------------------+--------------------+---------------------------+
-| Description        | UK                 | Germany                   |
-+--------------------+--------------------+---------------------------+
-| Head of State      | Federal Pressident | Bundespräsident           |
-| Legislature        | Parliament         | Neational Parliament      |
-| Head of Government | Prime Minister     | Canchellor                |
-| Head of Court      | Supreme Court      | Federal COnsitution Court |
-+--------------------+--------------------+---------------------------+
++-----------------------+-----------------------+------------------------------+
+| Description           | UK                    | Germany                      |
++-----------------------+-----------------------+------------------------------+
+| Head of State         | Federal Pressident    | Bundespräsident              |
+| Legislature Head of   | Parliament Prime      | Parliament Canchellor        |
+| Government Head of    | Minister Supreme      | Federal Consitution Court    |
+| Court                 | Court                 |                              |
++-----------------------+-----------------------+------------------------------+
+
