Aufarbeiten vom Bibel-Vergleich

--- a/Deutsch/Hiob/21.01.2014 - Vergleich Bibel Roman-Anfang.md
+++ b/Deutsch/Hiob/21.01.2014 - Vergleich Bibel Roman-Anfang.md
@@ -1,7 +1,7 @@
 Vergleich Bibel/Roman-Anfang
 ============================
 
-Parallele: fromm , gottesfürchtig, fleißig
-Unbestimmt: Ort/Zeit
-Unterschied: Reich zu arm, Ansehen zu gewöhnlich → Gegenentwurf?
+* Parallele: fromm , gottesfürchtig, fleißig
+* Unbestimmt: Ort/Zeit
+* Unterschied: Reich zu arm, Ansehen zu gewöhnlich → Gegenentwurf?
 
