--- a/Deutsch/Hiob/02.02.2014 - Die Singer-Kinder.md
+++ b/Deutsch/Hiob/02.02.2014 - Die Singer-Kinder.md
@@ -13,23 +13,33 @@ Jonas
 -   "Trinkt wie einem riesigen Säugling ähnlich" (S.26) → *Nicht
     Pflichtbewusst*
 -   "Einem riesigen Säugling ähnlich" (S. 26) → *Naiv*
+-   Möchte Bauer oder Soldat werden
+-   Gekräuseltes Haar, kleine schwarze Augen
+-   "Ich möchte Bauer sein und mit Mädchen schlafen"
+-   Ungelenk, grobschlächtig, immer hungrig
+-   Beschränkt
 
 Schemarjah
 ----------
 
--   "*Schlau* wie ein Fuchs" (S. 16)
+-   "*Schlau* wie ein Fuchs" (S. 16), hellwach
 -   "Zarte Geschicklichkeit" (S. 16) → *Handfertig begabt*
 -   Körperlich "gesund" (S. 24)
 -   Die Welt ist für Schemarjah weit (für seinen Bruder flach) (vgl. S.
     25) → *Fernfieber, Träumerisch*
+-   Feingliedrig
+-   Geschäftssinn
+-   "Will ein Jude sein wie mein Vater"
+-   "Ich möchte ein reicher Mann sein und das Leben sehen" → Fernweh
 
 Mirjam
 ------
 
 -   "Kokett und gedankenlos wie eine junge Garzelle" (S.22) → *Naiv*
--   Zart, *kokett* (S.17)
+-   Zart, *kokett* (S.17), "Künderin der Lust"
 -   fällt "in die Blickfelder der Offiziere" (S.22) → *Hübsch*
 -   *"Neugierig"* (S.23)
+-   Gelber Schal (Auffällig, Zeichen der Prositution im Mittelalter)
 
 Menuchim
 --------
