--- a/Englisch/30.01.2014 - The British system of government.md
+++ b/Englisch/30.01.2014 - The British system of government.md
@@ -46,3 +46,7 @@ The Prime Minister
 | Court                 | Court                 |                              |
 +-----------------------+-----------------------+------------------------------+
 
+Compared to the US-American system
+----------------------------------
+
+
