--- a/Geschichte/03.12.2013 - Robert Ide 'Geteilte Träume'.md
+++ b/Geschichte/03.12.2013 - Robert Ide 'Geteilte Träume'.md
@@ -1,46 +1,50 @@
-# Robert Ide "Geteilte Träume"
+Robert Ide "Geteilte Träume"
+============================
 
-## Analyse
+Analyse
+-------
 
-Der vorliegende Text "Geteilte Träume" ist der Erfahrungsbericht von Robert Ide,
-welcher 2007 veröffentlicht wurde. Robert Ide wurde 1975 im sächsichen Marienberg
-geboren. Der Text stellt also die Situation der Ostdeutschen empirisch anhand den
-Erfahrungen des Autors dar.
+Der vorliegende Text "Geteilte Träume" ist der Erfahrungsbericht von
+Robert Ide, welcher 2007 veröffentlicht wurde. Robert Ide wurde 1975 im
+sächsichen Marienberg geboren. Der Text stellt also die Situation der
+Ostdeutschen empirisch anhand den Erfahrungen des Autors dar.
 
-Thematisch befasst sich der Autor mit der Trennung von Menschen aus dem Gebiet
-der ehemaligen DDR von ihren Eltern und den unterschieden zwischen West- und
-Ostdeutschen.
+Thematisch befasst sich der Autor mit der Trennung von Menschen aus dem
+Gebiet der ehemaligen DDR von ihren Eltern und den unterschieden
+zwischen West- und Ostdeutschen.
 
-Im Weiteren wird der Einfachheit halber von Ostdeutschland geredet, gemeint ist
-damit aber das Gebiet der Ehemaligen "Deutschen Demokratischen Republik".
-Westdeutschland ist dieser Analogie folgend das Gebiet der vor der deutschen
-Wiedervereingung existierenden Bundesrepublik Deutschland (ab dem 03.10.1990).
+Im Weiteren wird der Einfachheit halber von Ostdeutschland geredet,
+gemeint ist damit aber das Gebiet der Ehemaligen "Deutschen
+Demokratischen Republik". Westdeutschland ist dieser Analogie folgend
+das Gebiet der vor der deutschen Wiedervereingung existierenden
+Bundesrepublik Deutschland (ab dem 03.10.1990).
 
-Am Anfang des Textes  wird beispielhaft von der Frau Katja berichtet, welche
-zwecks ihrer Firma nach Westdeutschland gezogen ist. Katja hat sich bei
-diesem Umzug von ihren Eltern, welche in Ostdeutschland zurück geblieben sind,
-getrennt hat.
+Am Anfang des Textes wird beispielhaft von der Frau Katja berichtet,
+welche zwecks ihrer Firma nach Westdeutschland gezogen ist. Katja hat
+sich bei diesem Umzug von ihren Eltern, welche in Ostdeutschland zurück
+geblieben sind, getrennt hat.
 
-Ab der Mitte des Textes wendet sich der Autor der Trennung von Menschen aus
-Ostdeutschland von ihren Eltern im Allgemeinen zu.
-Dabei geht der Autor besonders auf die Hindernisse und Probleme ein, die die
-Menschen mit dieser Trennung haben bzw. zeigt die unterschiedlichen
-Lebensverhältnisse von in Ostdeutschland im Vergleich zu in Westedeutschland
-Lebenden.
+Ab der Mitte des Textes wendet sich der Autor der Trennung von Menschen
+aus Ostdeutschland von ihren Eltern im Allgemeinen zu. Dabei geht der
+Autor besonders auf die Hindernisse und Probleme ein, die die Menschen
+mit dieser Trennung haben bzw. zeigt die unterschiedlichen
+Lebensverhältnisse von in Ostdeutschland im Vergleich zu in
+Westdeutschland Lebenden.
 
-Am Ende des vorliegenden Textes zieht der Autor ein allgemeines Fazit. Laut des
-Fazits stehen die jüngeren Ostdeutschen "mit beiden Beinen in Westdeutschland".
-Trotzdessen besteht aber noch eine Heimatverbundenheit und eine Unzufriedenheit
-mit der Situation der Osdeutschen Bundesstaaten bzw. deren Westintegration
+Am Ende des vorliegenden Textes zieht der Autor ein allgemeines Fazit.
+Laut des Fazits stehen die jüngeren Ostdeutschen "mit beiden Beinen in
+Westdeutschland". Trotzdessen besteht aber noch eine Heimatverbundenheit
+und eine Unzufriedenheit mit der Situation der Osdeutschen Bundesstaaten
+bzw. deren Westintegration
 
-Um das vorhin dargestellte zu präzisieren lässt sich die Situation der Kinder,
-welche in nach Westdeutschland umgezogen sind wie nachfolgend beschreiben.
-Es herrscht laut dem Autor eine Zerrissenheit zwischen beider Parteien, da zum
-einen die Heimat im Osten liegt, die bessere Arbeit allerdings in Westdeutschland.
-Weiterhin überdecken schlechte Erfahrungen mit Firmen, Vermietern und
-Krankenkassen die Freude über die Wiedervereinigung.
-Den Eltern in Ostdeutschland bleibt als einzes nur der Stolz über den Erfolg der
-nach Westendeutschland gezogenen Kinder.
-Laut dem Autor äußert sich bei beiden Parteien ein Minderwertigkeits-Gefühl, da
-man sich in der Hierachie niederer als die Menschen aus Westdeutschland anssieht.
-
+Um das vorhin dargestellte zu präzisieren lässt sich die Situation der
+Kinder, welche in nach Westdeutschland umgezogen sind wie nachfolgend
+beschreiben. Es herrscht laut dem Autor eine Zerrissenheit zwischen
+beider Parteien, da zum einen die Heimat im Osten liegt, die bessere
+Arbeit allerdings in Westdeutschland. Weiterhin überdecken schlechte
+Erfahrungen mit Firmen, Vermietern und Krankenkassen die Freude über die
+Wiedervereinigung. Den Eltern in Ostdeutschland bleibt als einzes nur
+der Stolz über den Erfolg der nach Westendeutschland gezogenen Kinder.
+Laut dem Autor äußert sich bei beiden Parteien ein
+Minderwertigkeits-Gefühl, da man sich in der Hierachie niederer als die
+Menschen aus Westdeutschland anssieht.
